@@ -27,3 +27,4 @@ hs_err_pid*
 /build/*
 /arcadeflex.cfg
 /roms/*
+/software/*
