@@ -44,4 +44,23 @@ public class cstring {
             return Integer.toString(found);//return in String
         }
     }
+    /**
+     * Locate first occurrence of character in string Returns a pointer to the first occurrence of character in the C string str.
+     * @param str
+     * @param ch
+     * @return 
+     */
+    public static String strchr(String str,char ch)
+    {
+        int found = str.indexOf(ch);
+        if(found==-1)//not found
+        {
+            return null;
+        }
+        else
+        {
+            return Integer.toString(found);//return in String
+        }
+    }
+    
 }
