@@ -12,9 +12,8 @@ import static mess.messH.*;
 import static mess.mess.*;
 import static old.mame.inptport.*;
 import static mess.vidhrdw.tms9928a.*;
-import old.arcadeflex.libc_old.FILE;
 import static old.arcadeflex.osdepend.*;
-import static old.arcadeflex.fileio.*;
+import static mess.osdepend.fileio.*;
 import static arcadeflex.libc.cstring.*;
 import static WIP.mame.osdependH.*;
 import static mame.commonH.*;
